--- a/style.css
+++ b/style.css
@@ -1,52 +1,39 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    outline: none;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  user-select: none;
+  outline: none;
 }
-
 body {
-    background-color: #000;
-    color: #fff;
+  background-color: #000;
+  color: #fff;
 }
-
 .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: #1f1f1f;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #1f1f1f;
 }
-
 .input-box {
-    width: 400px;
-    max-width: 90%;
-    position: relative;
+  width: 400px;
+  max-width: 90%;
+  position: relative;
 }
-
 .input-box input {
-    width: 100%;
-    height: 60px;
-    background-color: transparent;
-    color: #fff;
-    padding: 0 20px;
-    border: 1px solid #fff;
+  width: 100%;
+  height: 60px;
+  background-color: transparent;
+  color: #fff;
+  padding: 0 20px;
+  font-size: 20px;
+  border: 1px solid #fff;
 }
-
 .message {
-    position: absolute;
-    bottom: -30px;
-    color: #fff;
-    font-size: 15px;
-    display: none;
-}
-
-::placeholder {
-    font-size: 15px;
-}
-
-i {
-    color: #666 !important;
-    font-size: 18px;
-    cursor: pointer;
+  position: absolute;
+  bottom: -30px;
+  color: #fff;
+  font-size: 15px;
+  display: none;
 }
